@@ -1,16 +1,32 @@
-val scala3Version = "3.1.3"
+name := "Sésame"
 
-lazy val root = project
-  .in(file("."))
-  .settings(
-    name := "Sésame",
-    version := "0.1.0-SNAPSHOT",
+version := "0.1"
 
-    scalaVersion := scala3Version,
+scalaVersion := "3.1.3"
 
-    libraryDependencies += "org.typelevel" %% "cats-core" % "2.7.0",
-    libraryDependencies += "org.typelevel" %% "cats-effect" % "3.3.14",
-    libraryDependencies += "org.scalameta" %% "munit" % "0.7.29" % Test,
-    libraryDependencies += "org.apache.commons" % "commons-math3" % "3.6.1",
-    libraryDependencies += "org.rocksdb" % "rocksdbjni" % "7.3.1"
-  )
+libraryDependencies ++= Seq(
+  "org.typelevel" %% "cats-core" % "2.7.0",
+  "org.typelevel" %% "cats-effect" % "3.3.14",
+  "org.scalameta" %% "munit" % "0.7.29" % Test,
+  "org.apache.commons" % "commons-math3" % "3.6.1",
+  "org.rocksdb" % "rocksdbjni" % "7.3.1"
+)
+
+scalacOptions ++= Seq(
+  "-deprecation", // Warn about deprecated features
+  "-encoding", "UTF-8", // Specify character encoding used by source files
+  "-feature", // Emit warning and location for usages of features that should be imported explicitly
+  "-language:existentials", // Existential types (besides wildcard types) can be written and inferred
+  "-language:higherKinds", // Allow higher-kinded types
+  "-unchecked", // Enable additional warnings where generated code depends on assumptions
+)
+
+javaOptions ++= Seq(
+  "-XX:+CMSClassUnloadingEnabled", // Enable class unloading under the CMS GC
+  "-Xms10g",
+  "-Xmx14g",
+  // "-XX:+UseParNewGC",
+)
+
+// Test suite settings
+fork in Test := true
